--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -6,6 +6,6 @@
   button2Link: "https://github.com/emma-wilson/minimal-blog"
 
 - title: Open research in the Classroom
-  description: Free to use animations and slide deck for teaching introductory open research concepts to high-school pupils an undergraduate students.
+  description: Free to use animations and slide deck for teaching introductory open research concepts to high-school pupils and undergraduate students.
   button1Text: Website
   button1Link: https://blogs.ed.ac.uk/or-classroom/
